fixed navbar spacing on mobile

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -77,7 +77,6 @@ h6 {
   # Smooth Scrolling
   --------------------------------------------------------------*/
 
-#header,
 #page-wrapper,
 main {
   scroll-behavior: smooth;
@@ -174,7 +173,6 @@ main {
   --------------------------------------------------------------*/
 
 #intro {
-  width: 100%;
   height: 90vh;
   height: calc(100vh - 60px);
   background: var(--gradient1);
@@ -270,7 +268,11 @@ main {
     text-transform: uppercase;
   }
 }
-
+@media (max-width: 768px) {
+  .navbar h1 {
+    letter-spacing: 2px;
+  }
+}
 /* ------ Sections ------ */
 .section-header {
   .section-title {
